<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/gamesRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:text="@string/games"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editID"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/id"
            android:inputType="textPersonName"
            android:textSize="28sp" />

        <ToggleButton
            android:id="@+id/NormPri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textOff="@string/normal"
            android:textOn="@string/priority"
            android:textSize="28sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/weekday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekday"
                android:textSize="28sp" />

            <RadioButton
                android:id="@+id/weekend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Weekend"
                android:textSize="28sp" />
        </RadioGroup>

        <Button
            android:id="@+id/book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book"
            android:textSize="28sp" />
    </LinearLayout>
</LinearLayout>